--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "bootstrap-icons": "^1.11.3",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.0",
+    "react-cookie": "^7.0.2",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.21.3"
   },
