--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,8 @@
   "main": "app.js",
   "type": "module",
   "scripts": {
-    "start": "nodemon src/server.js",
+    "start": "node src/server.js",
+    "dev": "nodemon src/server.js",
     "start:prod": "NODE_ENV=production nodemon src/server.js"
   },
   "keywords": [],
